smallfix : foot&nav z-index Confirmation : chrome bugs only in win7laptop (20.0win7---dev-m ok)

--- a/main_site/static/css/headfoot.css
+++ b/main_site/static/css/headfoot.css
@@ -4,6 +4,8 @@ header, #bodyContainer, footer
     overflow: hidden;
     position: absolute;
     left: 0; right: 0;
+
+    z-index: 10;
 }
 
 header
@@ -34,6 +36,8 @@ footer
 {
     height: 45px;
     bottom: 0;
+
+    z-index: 10;
 }
 
 footer.index
